clusters/beryjuorg-prd/dj-jela-io/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ / {
        rewrite / https://soundcloud.com/beryju permanent;
      }
  name: dj-jela-io
  namespace: dj-jela-io
spec:
  rules:
    - host: dj.jela.io
      http:
        paths:
          - backend:
              service:
                name: wordpress
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dj.jela.io
      secretName: wordpress-acme
